--- a/history.html
+++ b/history.html
@@ -9,10 +9,13 @@
         background-color: #FFDFEF;
         padding: 3px;
     }
+    b{
+       color:#814996 ;
+    }
    </style>
 </head>
 <body>
-    <h1 id="heading1"><b><u>History Of Ahmednagar</u></b></h1>
+    <h1 id="heading1"><u>History Of Ahmednagar</u></h1>
     <hr>
     <div class="intro">
     <b><p>Ahmednagar, located in Maharashtra, India, has a rich history dating back to ancient times. The city played a significant role in various dynasties, including the Mauryas, Yadavas, Bahmani Sultanate, Mughals, Marathas, and the British. </p></b>
@@ -34,7 +37,11 @@
              <li>The Ahmednagar Fort was used by the British to imprison Indian leaders, including Jawaharlal Nehru, during the Quit India Movement (1942).</li>  
         </ul>
     </div>
+    <div>
+        <b>so this is all about Historyof Ahmednagar</b>
+    </div>
+    <hr>
     <a id="link" href="/history.html"><b>To get known more about Military of Ahmednagar </b></a>
-
+     <hr>
 </body>
 </html>
